<resources>
    <string name="app_name">SecCharge</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Log in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forget_password">Forgot Password ?</string>
    <string name="action_or">OR</string>
    <string name="action_register">Register</string>
    <string name="action_map">Search</string>
    <string name="action_addV">Add</string>
    <string name="action_updateV">Update</string>


    <string name="action_text">Easy &amp; Secure Charging \n On The Go..</string>
    <string name="action_addVehicle">Add Vehicle</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_log_out">Log Out</string>

    <string name="action_view_as_list">View as List</string>
    <string name="action_filter_station">Filter Station</string>
    <string name="action_satellite_map">Satellite Map</string>

    <string name="title_activity_pass_value">PassValueActivity</string>


    <string-array name ="car_year">
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>

    <string-array name="make_array">
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Chryslar</item>
        <item>Code_Automotive</item>
        <item>Dodge</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>General_Motors_EV</item>
        <item>Honda</item>
        <item>Kia</item>
        <item>Mercedes-Benz</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Scion</item>
        <item>Smart</item>
        <item>Solectria</item>
        <item>Tesla</item>
        <item>Tesla_Motors</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Wheego_Electric_Cars,_Inc.</item>
    </string-array>
    <string name="title_activity_account">My Account</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_my_ev">My EV</string>
    <string name="title_activity_add_vehicle">Add Vehicle</string>
    <string name="title_activity_soc">State Of Charge</string>
    <string name="title_activity_payment_info">Payment Info</string>
    <string name="title_activity_charge_now">ChargeNowActivity</string>


</resources>
